vectorized artmap